--- a/sept/sept/css/main.css
+++ b/sept/sept/css/main.css
@@ -583,6 +583,7 @@ html {
 }
 .center{
    font-size: 80px;
+   opacity: 0;
 }
 .center > span{
    animation: light 2.4s ease-in-out infinite;
@@ -591,6 +592,7 @@ html {
    0%, 100%{
        color: #fff;
        text-shadow: 0 0 18px #c705a4, 0 0 50px #c705a4, 0 0 100px #c705a4;
+       opacity: 1;
    }
    10%, 90%{
        color: #e9dddd;
