--- a/sept/sept/css/main.css
+++ b/sept/sept/css/main.css
@@ -591,6 +591,7 @@ html {
 }
 .center > span{
    animation: light 2.4s ease-in-out infinite;
+   animation-delay: .1s;
 }
 @keyframes light{
    0%, 100%{
@@ -608,43 +609,43 @@ html {
 .center > span:nth-child(1){
    animation-delay: .2s ;
    position:relative;
-   right: -20rem;
-   bottom: -300px;
+   right: -520px;
+   bottom: -150px;
 }
 .center > span:nth-child(2){
    animation-delay: .2s ;
    position:relative;
-   right: -480px;
-   bottom: -300px;
+   right: -530px;
+   bottom: -150px;
 }
 .center > span:nth-child(3){
    animation-delay: .4s ;
    position:relative;
-   right: -490px;
-   bottom: -300px;
+   right: -540px;
+   bottom: -150px;
 }
 .center > span:nth-child(4){
    animation-delay: .5s;
    position:relative;
-   right: -500px;
-   bottom: -300px;
+   right: -550px;
+   bottom: -150px;
 }
 .center > span:nth-child(5){
    animation-delay: .6s;
    position:relative;
-   right: -510px;
-   bottom: -300px;
+   right: -560px;
+   bottom: -150px;
 }
 .center > span:nth-child(6){
    animation-delay: .8s;
    position:relative;
-   right: -520px;
-   bottom: -300px;
+   right: -570px;
+   bottom: -150px;
 }.center > span:nth-child(7){
    animation-delay: 1s;
    position:relative;
-   right: -530px;
-   bottom: -300px;
+   right: -580px;
+   bottom: -150px;
 }
 
 p{
